# mathnet

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  TODO.md  branch_info.md
frontend/: Cargo.toml  Trunk.toml  auto.bat  buildwasmserve.bat  index.html  name_convention.md  [D[D[D_new_key)  [D[D[D_new_key).pub
frontend/src/: app.rs  group_struct.rs  ids.rs  index.html  lib.rs  list_of_pages.rs  main.rs  messages.rs  page_names.rs  routing.rs  state.rs  theserver.rs  user.rs
frontend/src/communication_with_server/: get_conversation.rs  mod.rs
frontend/src/experimental_examples/: dummy_page_content.rs  imaginary_chat_messages.rs  imaginary_friends.rs  mod.rs
frontend/src/frontend_design/: conversation_message.css  friends_and_people.css  licence_footer.css  responsive_navbar_and_left_sidebar.css  style.css
frontend/src/frontend_features/: delete_account.rs  left_sidebar.rs  mod.rs  top_navbar.rs  user_suggests_developers.rs
frontend/src/logics/: converting_ids_to_string.rs  date_and_time.rs  displaying_conversation.rs  displaying_friends.rs  go_to_page_to_page_convertion.rs  login_logics.rs  mod.rs  post_new_message.rs  registration_logics.rs  sidebars.rs  special_parsing.rs
frontend/src/pages/: about_project.rs  base_of_exercises.rs  base_of_learning_resources.rs  chat_with_friends.rs  conversation.rs  conversation_list.rs  delete_account.rs  docs.rs  event.rs  event_list.rs  exercise.rs  group.rs  group_list.rs  home.rs  learning_resources.rs  login.rs  mathnet_notifications.rs  mod.rs  privacy_and_security.rs  project.rs  project_list.rs  register.rs  settings.rs  sign_in.rs  sign_out.rs  user_profile.rs  user_profile_management.rs  user_public_profile.rs
frontend/src/rpc_client/: login.rs
frontend/src/static/: style.css
frontend/src/structs/: chat_message.rs  date_and_time.rs  emojis_and_reactions.rs  exercise.rs  friends_at_sidebar.rs  group_struct.rs  hashes.rs  languages.rs  list_of_exercises.rs  mod.rs  user.rs
frontend/static/: style.css
mathnet-server/: Cargo.toml
mathnet-server/.cargo/: config.toml
mathnet-server/examples/: quick_dev.rs
mathnet-server/sql/dev_initial/: 01-create-schema.sql  02-dev-seed.sql
mathnet-server/src/: config.rs  main.rs
mathnet-server/src/_dev_utils/: dev_db.rs  mod.rs
mathnet-server/src/ctx/: mod.rs
mathnet-server/src/log/: mod.rs
mathnet-server/src/model/: base.rs  chat.rs  error.rs  mather.rs  message.rs  mod.rs  thought.rs  user.rs  user_group.rs
mathnet-server/src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  (+2 more)
mathnet-server/web-folder/: frontend-31d48800697d4b0c.js  frontend-31d48800697d4b0c_bg.wasm  index.html
(+1364 files in other folders)
