[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
#sauron = { path = "../../", features = ["log-patches"] }
sauron = "0.70.0"
log = "0.4"
console_log = "0.2"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
chrono="0.4.41"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = "0.6.0"
axum = { version = "0.7", features = ["macros"] }
wasm-bindgen-futures = "0.4"
