[package]
name = "mathnet-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Date
chrono = { version = "0.4", features = ["serde"] }
# -- Web
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["fs"] }
tower-cookies = "0.10"
# -- Data
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
sqlb = { version = "0.3", features = ["chrono-support"] }
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Others
uuid = {version = "1", features = ["v4","fast-rng",]}
lazy-regex = "3"
async-trait = "0.1"
strum_macros = "0.25"
derive_more = {version = "2.0.1", features = ["from"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
serial_test = "2"